--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+.holder {
+	display:flex;
+	font-size:40px;
+	justify-content:space-between;
+	flex-wrap:wrap;
+}
+.item-1 {
+	background:green;
+	width:100px;
+	height:100px;
+}
+.item-2 {
+	background:red;
+	width:100px;
+	height:100px;
+}
+.item-3 {
+	background:blue;
+	width:100px;
+	height:100px;
+}
